Add post folder to version control

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://pei0525.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Pei's Blog
+subtitle: Sometimes, it's the boring stuff I remebered the most.
+author: Pei
 simple_search: http://google.com/search
 description:
 
